--- a/about.html
+++ b/about.html
@@ -280,6 +280,9 @@ $(document).ready(function () {
   <a href="about.html">About</a>
 </li>
 <li>
+  <a href="plotly.html">Prob2</a>
+</li>
+<li>
   <a href="mailto:&lt;yz3738@cumc.columbia.edu&gt;">
     <span class="fa fa-envelope fa-lg"></span>
      
