--- a/index.html
+++ b/index.html
@@ -356,6 +356,9 @@ div.tocify {
   <a href="about.html">About</a>
 </li>
 <li>
+  <a href="plotly.html">Prob2</a>
+</li>
+<li>
   <a href="mailto:&lt;yz3738@cumc.columbia.edu&gt;">
     <span class="fa fa-envelope fa-lg"></span>
      
